--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <a href="#music">Music</a>
     <a href="#concerts">Concert Dates</a>
     <a href="#store">Store</a>
+    <a href="#book">Book</a>
     <a href="#links">Links</a>
     <a href="#blog">Blog</a>
     <a href="#contact">Contact</a>
@@ -90,6 +91,30 @@
     </div>
   </section>
 
+  <section id="book">
+    <h2>📘 The Book of Blackness</h2>
+    <p>Experience the journey — download, read online, or listen to the audio version.</p>
+    <ul>
+      <li>
+        📥 <strong>Download:</strong>
+        <a href="https://vsteven95.github.io/victor-steven-website/The%20Book%20of%20Blackness.pdf" download>
+          Click here to download the PDF
+        </a>
+      </li>
+      <li>
+        📖 <strong>Read Online:</strong><br />
+        <iframe src="https://vsteven95.github.io/victor-steven-website/The%20Book%20of%20Blackness.pdf" style="width:100%; height:600px;" frameborder="0"></iframe>
+      </li>
+      <li>
+        🔊 <strong>Audio Version:</strong><br />
+        <audio controls>
+          <source src="https://your-audio-link.com/audio.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
+      </li>
+    </ul>
+  </section>
+
   <section id="links">
     <h2>Connect with Me</h2>
     <div class="links">
@@ -107,7 +132,6 @@
       <h3>Welcome to My Blog</h3>
       <p>This is where I'll be sharing updates, thoughts, and inspiration from the journey. Stay tuned for more posts.</p>
     </div>
-    <!-- Add more blog-entry blocks here -->
   </section>
 
   <section id="contact">
