--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
     <ul>
       <li>
         📥 <strong>Download:</strong>
-        <a href="https://vsteven95.github.io/victor-steven-website/The%20Book%20of%20Blackness.pdf" download>
+        <a href="https://vsteven95.github.io/victor-steven-website/TheBookofBlackness.pdf" download>
           Click here to download the PDF
         </a>
       </li>
       <li>
         📖 <strong>Read Online:</strong><br />
-        <iframe src="https://vsteven95.github.io/victor-steven-website/The%20Book%20of%20Blackness.pdf" style="width:100%; height:600px;" frameborder="0"></iframe>
+        <iframe src="https://vsteven95.github.io/victor-steven-website/TheBookofBlackness.pdf" style="width:100%; height:600px;" frameborder="0"></iframe>
       </li>
       <li>
         🔊 <strong>Audio Version:</strong><br />
