--- a/index.html
+++ b/index.html
@@ -93,22 +93,22 @@
 
   <section id="book">
     <h2>📘 The Book of Blackness</h2>
-    <p>Experience the journey — download, read online, or listen to the audio version.</p>
+    <p>Experience the journey — download or read my book below:</p>
     <ul>
       <li>
         📥 <strong>Download:</strong>
-        <a href="https://vsteven95.github.io/victor-steven-website/TheBookofBlackness.pdf" download>
+        <a href="TheBookofBlackness.pdf" download>
           Click here to download the PDF
         </a>
       </li>
       <li>
         📖 <strong>Read Online:</strong><br />
-        <iframe src="https://vsteven95.github.io/victor-steven-website/TheBookofBlackness.pdf" style="width:100%; height:600px;" frameborder="0"></iframe>
+        <iframe src="TheBookofBlackness.pdf" style="width:100%; height:600px;" frameborder="0"></iframe>
       </li>
       <li>
         🔊 <strong>Audio Version:</strong><br />
         <audio controls>
-          <source src="https://your-audio-link.com/audio.mp3" type="audio/mpeg">
+          <source src="https://your-audio-link.com/audio.mp3" type="audio/mpeg" />
           Your browser does not support the audio element.
         </audio>
       </li>
@@ -150,3 +150,4 @@
   </footer>
 </body>
 </html>
+
