--- a/index.html
+++ b/index.html
@@ -2,80 +2,127 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Book of Blackness</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Victor Steven</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
       margin: 0;
       padding: 0;
-      background: #000;
-      color: #fff;
     }
     header {
-      background: #111;
+      background-color: #222;
+      color: #fff;
+      padding: 2rem;
       text-align: center;
-      padding: 40px 20px;
     }
-    header h1 {
-      font-size: 2.5em;
-      margin: 0;
+    nav {
+      text-align: center;
+      margin: 1rem 0;
     }
-    header p {
-      font-size: 1.2em;
-      margin-top: 10px;
-      color: #bbb;
+    nav a {
+      margin: 0 1rem;
+      text-decoration: none;
+      color: #333;
     }
     section {
-      padding: 40px 20px;
-      text-align: center;
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
     }
-    section h2 {
-      font-size: 2em;
-      margin-bottom: 20px;
-      color: #fff;
-    }
-    .store a {
+    .links a, .store a {
       display: block;
-      margin: 10px auto;
-      padding: 12px 24px;
-      background: #e91e63;
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 8px;
-      width: 80%;
-      max-width: 300px;
-    }
-    .store a:hover {
-      background: #c2185b;
+      margin: 0.5rem 0;
+      color: #0077cc;
     }
     footer {
+      background-color: #222;
+      color: #fff;
       text-align: center;
-      padding: 20px;
-      background: #111;
-      font-size: 0.9em;
-      color: #888;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+    .blog-entry {
+      background: #fff;
+      border: 1px solid #ddd;
+      padding: 1rem;
+      margin-bottom: 1rem;
     }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>The Book of Blackness</h1>
-    <p>By Sharee Lasha Lane</p>
+    <h1>Victor Steven</h1>
+    <p>Music | Inspiration | Connection</p>
   </header>
+
+  <nav>
+    <a href="#music">Music</a>
+    <a href="#concerts">Concert Dates</a>
+    <a href="#store">Store</a>
+    <a href="#links">Links</a>
+    <a href="#blog">Blog</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="music">
+    <h2>My Music</h2>
+    <p>Listen to my latest tracks and projects.</p>
+    <iframe src="https://open.spotify.com/embed/artist/your-artist-id" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  </section>
+
+  <section id="concerts">
+    <h2>Upcoming Concert Dates</h2>
+    <ul>
+      <li>July 15, 2025 - Kingston, Jamaica <a href="https://your-ticket-link.com" target="_blank">Buy Tickets</a></li>
+      <li>August 20, 2025 - Nairobi, Kenya <a href="https://your-ticket-link.com" target="_blank">Buy Tickets</a></li>
+    </ul>
+  </section>
 
   <section id="store">
     <h2>Official Store</h2>
     <div class="store">
-      <a href="https://bookofblackness.printify.me/" target="_blank">Visit Merch Store</a>
+      <a href="https://bookofblackness.printify.me/" target="_blank">Buy My Book</a>
+      <a href="https://your-music-store.com" target="_blank">Buy CDs & Downloads</a>
+      <a href="https://your-merch-store.com" target="_blank">Merchandise Store</a>
+      <a href="https://your-concert-tickets.com" target="_blank">Concert Tickets</a>
     </div>
   </section>
 
-  <footer>
-    &copy; 2025 The Book of Blackness. All rights reserved.
-  </footer>
+  <section id="links">
+    <h2>Connect with Me</h2>
+    <div class="links">
+      <a href="https://www.youtube.com/@VictorSteven" target="_blank">YouTube</a>
+      <a href="https://www.tiktok.com/@victorsteven" target="_blank">TikTok</a>
+      <a href="https://open.spotify.com/artist/your-artist-id" target="_blank">Spotify</a>
+      <a href="https://music.apple.com/your-artist-link" target="_blank">Apple Music</a>
+      <a href="mailto:booking@victorsteven.com">Booking Email</a>
+    </div>
+  </section>
 
+  <section id="blog">
+    <h2>Blog</h2>
+    <div class="blog-entry">
+      <h3>Welcome to My Blog</h3>
+      <p>This is where I'll be sharing updates, thoughts, and inspiration from the journey. Stay tuned for more posts.</p>
+    </div>
+    <!-- Add more blog-entry blocks here -->
+  </section>
+
+  <section id="contact">
+    <h2>Stay Updated</h2>
+    <form action="https://example.com/submit-form" method="POST">
+      <label for="name">Name:</label><br />
+      <input type="text" id="name" name="name" required /><br /><br />
+      <label for="email">Email:</label><br />
+      <input type="email" id="email" name="email" required /><br /><br />
+      <input type="submit" value="Subscribe" />
+    </form>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Victor Steven. All rights reserved.</p>
+  </footer>
 </body>
 </html>
